Java 17 / Spring 6 / Spring Boot 3 Upgrade
Issue-ID: POLICY-4670
Change-Id: Id28a45fa0bcb17903065904bd9544012d5fefbb7
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>